--- a/mushroom_toxicity.ipynb
+++ b/mushroom_toxicity.ipynb
@@ -3,27 +3,28 @@
   {
    "cell_type": "markdown",
    "id": "397e9992",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "id": "d73575c9",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.compose import make_column_selector, make_column_transformer\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.pipeline import make_pipeline"
    ]
   },
   {
@@ -2739,9 +2740,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_498600/3373600242.py:11: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "/tmp/ipykernel_545998/3373600242.py:11: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  plt.bar(x = cols, height = df.loc[filter, :].mean(),\n",
-      "/tmp/ipykernel_498600/3373600242.py:15: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "/tmp/ipykernel_545998/3373600242.py:15: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  plt.bar(x = cols, height = df.loc[~filter, :].mean(),\n"
      ]
     },
@@ -2801,9 +2802,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_498600/4122802978.py:11: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "/tmp/ipykernel_545998/4122802978.py:11: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  plt.bar(x = cols, height = df.loc[filter, :].median(),\n",
-      "/tmp/ipykernel_498600/4122802978.py:15: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "/tmp/ipykernel_545998/4122802978.py:15: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  plt.bar(x = cols, height = df.loc[~filter, :].median(),\n"
      ]
     },
@@ -2962,12 +2963,176 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "324afdd9",
+   "metadata": {},
+   "source": [
+    "# Data preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "cbe64448",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "p    0.553847\n",
+       "e    0.446153\n",
+       "Name: class, dtype: float64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the balance of the target\n",
+    "ml_df['class'].value_counts(normalize = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "746fddaa",
+   "metadata": {},
+   "source": [
+    "> While this data is not perfectly balanced, it does not seem imbalanced enough to apply oversampling, undersampling, or stratification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "539b4a7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class                       0\n",
+       "cap-diameter                0\n",
+       "cap-shape                   0\n",
+       "cap-surface             14120\n",
+       "cap-color                   0\n",
+       "does-bruise-or-bleed        0\n",
+       "gill-attachment          9855\n",
+       "gill-spacing            25062\n",
+       "gill-color                  0\n",
+       "stem-height                 0\n",
+       "stem-width                  0\n",
+       "stem-color                  0\n",
+       "has-ring                    0\n",
+       "ring-type                2471\n",
+       "habitat                     0\n",
+       "season                      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remind ourselves what data is missing\n",
+    "ml_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "cd4d4ffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 60923 entries, 0 to 61068\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   cap-surface      46803 non-null  object\n",
+      " 1   gill-attachment  51068 non-null  object\n",
+      " 2   gill-spacing     35861 non-null  object\n",
+      " 3   ring-type        58452 non-null  object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 2.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the data type of the missing data\n",
+    "filter = ml_df.isna().any() > 0\n",
+    "ml_df.loc[:, filter].info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c42cff38",
+   "metadata": {},
+   "source": [
+    "> All the missing data is categorical. This will be imputed with a 'missing' label."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "46b77d07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the features and target\n",
+    "X = ml_df.drop(columns = 'class')\n",
+    "y = ml_df['class']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "bb026766",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "c3b81a9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a preprocessing column transformer\n",
+    "\n",
+    "# Make column selectors\n",
+    "num_selector = make_column_selector(dtype_include = 'number')\n",
+    "cat_selector = make_column_selector(dtype_include = 'object')\n",
+    "\n",
+    "# Make a pipeline for the categorical data\n",
+    "cat_pipe = make_pipeline(SimpleImputer(strategy = 'constant', fill_value = 'M'),\n",
+    "                         OneHotEncoder(sparse = False, handle_unknown = 'ignore'))\n",
+    "\n",
+    "# Make tuples for the column transformer\n",
+    "num_tuple = (StandardScaler(), num_selector)\n",
+    "cat_tuple = (cat_pipe, cat_selector)\n",
+    "\n",
+    "# Make the column transformer\n",
+    "col_transformer = make_column_transformer(num_tuple, \n",
+    "                                          cat_tuple, \n",
+    "                                          remainder = 'passthrough')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc3126df",
-   "metadata": {
-    "hidden": true
-   },
+   "id": "82910eb1",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
